[package]
name = "habitctl"
version = "0.1.0"
authors = ["Sebastian Morr <sebastian@morr.cc>"]
description = "Minimalist command line tool you can use to track and examine your habits."
edition = "2018"

[dependencies]
chrono = "0.4.11"
rprompt = "1.0.5"
clap = "2.33.1"
open = "1.4.0"
dirs = "3.0.0"
